--- a/AssetDataManagement/pom.xml
+++ b/AssetDataManagement/pom.xml
@@ -57,6 +57,7 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -68,7 +69,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
 	</dependencies>
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
 
 	<build>
 		<plugins>
